--- a/portfolio.html
+++ b/portfolio.html
@@ -20,30 +20,34 @@
   <body>
     <!--header-->
     <header class="line">
-      <div class="container main-flex"> 
-      <nav>
-        <a href="./index.html" class="link logo">Web<span class="logo-part">Studio</span> </a>
-        <ul class="list sait-nav">
-          <li class="item"><a href="./index.html" class="link nav-link">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link nav-link current">Портфоліо</a></li>
-          <li class="item"><a href="#" class="link nav-link">Контакти</a></li>
+      <div class="container header">
+        <nav class="nav">
+          <a href="./index.html" class="link nav__logo">Web<span class="nav__logo-part">Studio</span> </a>
+          <ul class="list nav__sait sait-nav">
+            <li class="sait-nav__item"><a href="./index.html" class="link sait-nav__nav-link">Студія</a>
+            </li>
+            <li class="sait-nav__item">
+              <a href="./portfolio.html" class="link sait-nav__nav-link sait-nav__nav-link--current">Портфоліо</a></li>
+            <li class="sait-nav__item"><a href="#" class="link sait-nav__nav-link">Контакти</a></li>
+          </ul>
+        </nav>
+    
+        <ul class="list nav__auth auth-nav">
+          <li class="auth-nav__item">
+            <a href="mailto:info@devstudio.com" class="link auth-nav__mailto-tel">
+              <svg class="auth-nav__icon-envelope" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>info@devstudio.com
+            </a>
+          </li>
+    
+          <li class="auth-nav__item">
+            <a href="tel:+380961111111" class="link auth-nav__mailto-tel">
+              <svg class="auth-nav__icon-smartphone" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>+38 (096) 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="list auth-nav">
-
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="link mailto-tel">
-            <svg class="icon-envelope" width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope"></use>
-            </svg>info@devstudio.com
-          </a>   
-        </li>
-
-        <li class="item"><a href="tel:+380961111111" class="link mailto-tel">
-          <svg class="icon-smartphone" width="10" height="16">
-              <use href="./images/sprite.svg#icon-smartphone"></use>
-          </svg>+38 (096) 111 11 11</a></li>
-      </ul>
       </div>
     </header>
 
