Рефакторинг першой сторінки по ВЕМ
Виконано рефакторинг HTML-коду та CSS-коду проекту, використовуючи методологію BEM першой сторінки.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <header class="line">
       <div class="container header">
         <nav class="nav">
-          <a href="./index.html" class="link nav__logo">Web<span class="nav__logo-part">Studio</span> </a>
+          <a href="./index.html" class="link logo">Web<span class="logo--dark">Studio</span> </a>
           <ul class="list nav__sait sait-nav">
             <li class="sait-nav__item"><a href="./index.html" class="link sait-nav__nav-link">Студія</a>
             </li>
@@ -259,7 +259,8 @@
         <div class="footer-container">
 
           <div class="container-address">
-          <a href="./index.html" class="link logo-link logo">Web<span class="logo-footer">Studio</span> </a>
+          <a href="./index.html" class="link logo logo__link">
+            Web<span class="logo--white">Studio</span></a>
           <address class="address">
             <ul class="list">
               <li class="conact">
@@ -322,7 +323,8 @@
             <b class="come-back">Підпишіться на розсилку</b>
             <form class="form-email" name="form-email" method="post">
           
-              <input class="input-email-form" type="email" name="input-email" id="input-email" placeholder="E-mail">
+              <input class="input-email-form" type="email" name="input-email" 
+              id="input-email" placeholder="E-mail">
           
               <button type="submit" class="label-email-btn">
                 <b class="span-label-email">Підписатися</b>
