Рефакторинг використовуючи методологію BEM
Виконано рефакторинг HTML-коду та CSS-коду  проекту, використовуючи методологію BEM на сторіньці портфоліо

--- a/index.html
+++ b/index.html
@@ -456,15 +456,15 @@
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="link address__map">
+                  class="link address__link address__link--map">
                   г. Київ, пр-т Леси Українки, 26
                 </a>
               </li>
               <li class="address__conact">
-                <a href="mailto:info@devstudio.com" class="link address__link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link address__link address__link--contact">info@devstudio.com</a>
               </li>
               <li>
-                <a href="tel:+380961111111" class="link address__link">+38 (096) 111 11 11</a>
+                <a href="tel:+380961111111" class="link address__link address__link--contact">+38 (096) 111 11 11</a>
               </li>
             </ul>
           </address>
