--- a/portfolio.html
+++ b/portfolio.html
@@ -56,195 +56,195 @@
       <section class="section">
         <div class="container"> 
         <h1 hidden class="visually-hidden">Портфоліо</h1>
-        <ul class="list filter-list">
-          <li class="item"><button type="button" class="filter-btn">Усі</button></li>
-          <li class="item"><button type="button" class="filter-btn">Веб-сайти</button></li>
-          <li class="item"><button type="button" class="filter-btn">Додатки</button></li>
-          <li class="item"><button type="button" class="filter-btn">Дизайн</button></li>
-          <li class="item"><button type="button" class="filter-btn">Маркетинг</button></li>
+        <ul class="list filter filter__list">
+          <li class="filter__item"><button type="button" class="filter__btn">Усі</button></li>
+          <li class="filter__item"><button type="button" class="filter__btn">Веб-сайти</button></li>
+          <li class="filter__item"><button type="button" class="filter__btn">Додатки</button></li>
+          <li class="filter__item"><button type="button" class="filter__btn">Дизайн</button></li>
+          <li class="filter__item"><button type="button" class="filter__btn">Маркетинг</button></li>
         </ul>
         <!-- project -->
-        <ul class="list project-list">
-          <li class="meta-img">
-            <a href="#" class="project">
+        <ul class="list project__list">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(7).jpg" alt="Фото MacBook Pro" width="370" />
                 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні 
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні 
                     пропозиції з різним рівнем функціоналу та сервісів. 
                     Все це дозволить відвідувачу отримати вичерпні відомості 
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Технокряк</h2>
-                <p class="meta">Веб-сайт</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Технокряк</h2>
+                <p class="project__more">Веб-сайт</p>
               </div>
             </a>
           </li>
 
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(8).jpg" alt="фото з баскетболістами" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Постер New Orlean vs Golden Star</h2>
-                <p class="meta">Дизайн</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Постер New Orlean vs Golden Star</h2>
+                <p class="project__more">Дизайн</p>
               </div>
             </a>
           </li>
 
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(9).jpg" alt="фото з логотипом ресторану Seafood" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Ресторан Seafood</h2>
-                <p class="meta">Додаток</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Ресторан Seafood</h2>
+                <p class="project__more">Додаток</p>
               </div>
             </a>
           </li>
 
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(10).jpg" alt="фото навушнкив" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Проєкт Prime</h2>
-                <p class="meta">Маркетинг</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Проєкт Prime</h2>
+                <p class="project__more">Маркетинг</p>
               </div>
             </a>
           </li>
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(11).jpg" alt="фото коробочек" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Проєкт Boxes</h2>
-                <p class="meta">Додаток</p> 
+              <div class="project__inner">
+                <h2 class="project__benefits">Проєкт Boxes</h2>
+                <p class="project__more">Додаток</p> 
               </div>
             </a>
           </li>
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(12).jpg" alt="фото монітора" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Inspiration has no Borders</h2>
-                <p class="meta">Веб-сайт</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Inspiration has no Borders</h2>
+                <p class="project__more">Веб-сайт</p>
               </div>
             </a>
           </li>
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(13).jpg" alt="фото відкритой книги" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Видання Limited Edition</h2>
-                <p class="meta">Дизайн</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Видання Limited Edition</h2>
+                <p class="project__more">Дизайн</p>
               </div>
             </a>
           </li>
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(14).jpg" alt="фото бірки" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Проєкт LAB</h2>
-                <p class="meta">Маркетинг</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Проєкт LAB</h2>
+                <p class="project__more">Маркетинг</p>
               </div>
             </a>
           </li>
-          <li class="meta-img">
-            <a href="#" class="project">
+          <li class="project__meta-img">
+            <a href="#" class="project__meta">
 
-              <div class="project-hidden">
+              <div class="project__hidden">
                 <img src="./images/img(15).jpg" alt="фото відкритого ноутбука" width="370" />
 
-                <div class="project-overlay">
-                  <p class="project-description">Ресурс пропонує комплексні
+                <div class="project__overlay">
+                  <p class="project__description">Ресурс пропонує комплексні
                     пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості
                     про компанію чи приватну особу.</p>
                 </div>
               </div>
 
-              <div class="div">
-                <h2 class="benefits">Growing Business</h2>
-                <p class="meta">Додаток</p>
+              <div class="project__inner">
+                <h2 class="project__benefits">Growing Business</h2>
+                <p class="project__more">Додаток</p>
               </div>
             </a>
           </li>
@@ -261,16 +261,18 @@
           <address class="address">
             <ul class="list">
               <li class="address__conact">
-                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-                  class="link address__map">
+                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
+                target="_blank" 
+                rel="noopener noreferrer nofollow"
+                class="link address__link address__link--map">
                   г. Київ, пр-т Леси Українки, 26
                 </a>
               </li>
               <li class="address__conact">
-                <a href="mailto:info@devstudio.com" class="link address__link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link address__link address__link--contact">info@devstudio.com</a>
               </li>
               <li>
-                <a href="tel:+380961111111" class="link address__link">+38 (096) 111 11 11</a>
+                <a href="tel:+380961111111" class="link address__link address__link--contact">+38 (096) 111 11 11</a>
               </li>
             </ul>
           </address>
