Рефакторинг, по методологію BEM.
Рефакторинг HTML-коду та CSS-коду проекту, використовуючи методологію BEM.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
 
   <body>
@@ -38,7 +39,7 @@
         <ul class="list nav__auth auth-nav">
           <li class="auth-nav__item">
             <a href="mailto:info@devstudio.com" class="link auth-nav__mailto-tel">
-              <svg class="auth-nav__icon-envelope" width="16" height="12">
+              <svg class="auth-nav__icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>info@devstudio.com
             </a>
@@ -46,7 +47,7 @@
 
           <li class="auth-nav__item">
             <a href="tel:+380961111111" class="link auth-nav__mailto-tel">
-              <svg class="auth-nav__icon-smartphone" width="10" height="16">
+              <svg class="auth-nav__icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>+38 (096) 111 11 11</a>
           </li>
@@ -133,7 +134,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">НАШІ ПЕРЕВАГИ</h2>
-          <ul class="list feature feature__promo">
+          <ul class="list feature">
             <li class="feature__item">
               <div class="feature__color">
                 <svg class="feature__icon-antenna" width="70" height="70">
@@ -185,7 +186,7 @@
       <section class="section">
         <div class="container">
           <h2 class="subtitle subtitle__title">Чим ми займаємося</h2>
-          <ul class="list thumbnail thumbnail__list">
+          <ul class="list thumbnail thumbnail">
             <li class="thumbnail__item thumbnail__box">
               <img
                 src="./images/img(4).jpg"
@@ -220,7 +221,7 @@
         <div class="container">
           <h2 class="subtitle subtitle__title ">Наша команда</h2>
 
-          <ul class="list page-thumb__list">
+          <ul class="list page-thumb">
             <li class="page-thumb__img page-thumb__item">
               <img
                 src="./images/img.jpg"
