--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css">
     <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <!--header-->
@@ -35,7 +36,7 @@
         <ul class="list nav__auth auth-nav">
           <li class="auth-nav__item">
             <a href="mailto:info@devstudio.com" class="link auth-nav__mailto-tel">
-              <svg class="auth-nav__icon-envelope" width="16" height="12">
+              <svg class="auth-nav__icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>info@devstudio.com
             </a>
@@ -43,7 +44,7 @@
     
           <li class="auth-nav__item">
             <a href="tel:+380961111111" class="link auth-nav__mailto-tel">
-              <svg class="auth-nav__icon-smartphone" width="10" height="16">
+              <svg class="auth-nav__icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>+38 (096) 111 11 11</a>
           </li>
