Рефакторинг CSS-коду проекту, використовуючи препроцесор SASS.
Виконано рефакторинг CSS-коду проекту, використовуючи препроцесор SASS.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
     />
     <!-- Styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
 
