--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--header-->
-    <header class="line">
+    <header class="line header-desk">
       <div class="container header">
         <nav class="nav">
           <a href="./index.html" class="link logo">Web<span class="logo--dark">Studio</span> </a>
