--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
           </ul>
 
           <!-- menu button -->
-          <button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <button 
+              type="button" 
+              class="menu-button js-open-menu" 
+              aria-expanded="false" 
+              aria-controls="mobile-menu">
             <svg class="icon" width="40" height="40">
               <use class="icon-menu" href="./images/menu-mobail.svg#icon-menu"></use>
             </svg>
@@ -48,7 +52,9 @@
           <div class="mobai-menu js-menu-container" id="mobile-menu">
 
             <!-- menu close -->
-            <button type="button" class="menu-close js-close-menu">
+            <button 
+                type="button" 
+                class="menu-close js-close-menu">
               <svg class="icon" width="40" height="40">
                 <use class="icon-close" href="./images/menu-mobail.svg#icon-close"></use>
               </svg>
@@ -56,7 +62,7 @@
 
             <ul class="list mobail-menu__nav nav-menu">
               <li class="nav-menu__item">
-                <a href="./index.html" class="link nav-menu__link">Студія</a>
+                <a href="./index.html" class="link nav-menu__link--current">Студія</a>
               </li>
               <li class="nav-menu__item">
                 <a href="./portfolio.html" class="link nav-menu__link">Портфоліо</a>
@@ -114,8 +120,8 @@
       
       <!--hero-->
 
-      <section >
-        <div class="container hero">
+      <section class="hero">
+        <div class="container">
           <h1 class="hero-titel">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
           <button type="button" class="hero-btn" data-modal-open>Замовити послугу</button>
 
@@ -289,8 +295,8 @@
 
       <!--section page-->
 
-      <section class="page section container">
-        <div  >
+      <section class="page">
+        <div  class="container section">
           <h2 class="subtitle subtitle__title">Наша команда</h2>
 
           <ul class="list page-thumb">
