--- a/portfolio.html
+++ b/portfolio.html
@@ -25,15 +25,27 @@
         <nav class="nav">
           <a href="./index.html" class="link logo">Web<span class="logo--dark">Studio</span> </a>
           <ul class="list nav__sait sait-nav">
-            <li class="sait-nav__item"><a href="./index.html" class="link sait-nav__nav-link">Студія</a>
+            <li class="sait-nav__item">
+              <a 
+                href="./index.html" 
+                class="link sait-nav__nav-link">Студія</a>
             </li>
             <li class="sait-nav__item">
-              <a href="./portfolio.html" class="link sait-nav__nav-link sait-nav__nav-link--current">Портфоліо</a></li>
-            <li class="sait-nav__item"><a href="#" class="link sait-nav__nav-link">Контакти</a></li>
+              <a 
+                href="./portfolio.html" 
+                class="link sait-nav__nav-link sait-nav__nav-link--current">Портфоліо</a></li>
+            <li class="sait-nav__item">
+              <a 
+                href="#" 
+                class="link sait-nav__nav-link">Контакти</a></li>
           </ul>
 
           <!-- menu button -->
-          <button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <button 
+              type="button" 
+              class="menu-button js-open-menu" 
+              aria-expanded="false" 
+              aria-controls="mobile-menu">
             <svg class="icon" width="40" height="40">
               <use class="icon-menu" href="./images/menu-mobail.svg#icon-menu"></use>
             </svg>
@@ -55,7 +67,7 @@
                 <a href="./index.html" class="link nav-menu__link">Студія</a>
               </li>
               <li class="nav-menu__item">
-                <a href="./portfolio.html" class="link nav-menu__link">Портфоліо</a>
+                <a href="./portfolio.html" class="link nav-menu__link--current">Портфоліо</a>
               </li>
               <li class="nav-menu__item">
                 <a href="" class="link nav-menu__link">Контакти</a>
@@ -465,9 +477,11 @@
         </div>
       </section>
     </main>
+
     <!--footer-->
+
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="footer-container container">
         <div class="container-footer">
           <div class="container-address">
             <a href="./index.html" class="link logo logo__link">
